--- a/package.json
+++ b/package.json
@@ -5,14 +5,35 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jest": "^28.1.3",
     "mongoose": "^6.5.1",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
-  }
+  },
+  "description": "A CRUD inventory application for a fake art e-commerce store. Built following MVC architecture. Images sourced using the Art Institute of Chicago API.",
+  "main": "app.js",
+  "directories": {
+    "test": "tests"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jeromecho/art-show-.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jeromecho/art-show-/issues"
+  },
+  "homepage": "https://github.com/jeromecho/art-show-#readme"
 }
