--- a/package.json
+++ b/package.json
@@ -9,22 +9,27 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "async": "^3.2.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jest": "^28.1.3",
+    "luxon": "^3.0.1",
     "mongoose": "^6.5.1",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.6.7",
+    "path": "^0.12.7",
+    "pug": "2.0.0-beta11",
+    "unsplash-js": "^7.0.15"
   },
   "description": "A CRUD inventory application for a fake art e-commerce store. Built following MVC architecture. Images sourced using the Art Institute of Chicago API.",
   "main": "app.js",
   "directories": {
     "test": "tests"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jeromecho/art-show-.git"
