--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "express-validator": "^6.14.2",
+    "html-entities": "^2.3.3",
     "http-errors": "~1.6.3",
     "jest": "^28.1.3",
     "luxon": "^3.0.1",
