--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": {
+      "node": "17.6.0"
+  },
   "jest": {
     "testEnvironment": "node"
   },
